<resources>
    <string name="app_name">tokowiwin-android</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="masuk">Masuk</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="daftar">Daftar</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_kata_sandi">Masukkan Kata Sandi</string>
    <string name="masukkan_ulang_kata_sandi">Masukkan Ulang Kata Sandi</string>
    <string name="masuk_disini">Masuk Disini</string>
    <string name="beranda">Beranda</string>
    <string name="transaksi">Transaksi</string>
    <string name="akun">Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_lorem_ipsum">Hi, Lorem Ipsum</string>
    <string name="ganti_kata_sandi">Ganti Kata Sandi</string>
    <string name="keluar">Keluar</string>
    <string name="v0_1_beta">v0.1 - Beta</string>
    <string name="tokowiwin">TokoWiwin</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="kata_sandi_lama">Kata Sandi Lama</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="qty">Qty</string>
    <string name="tambahkan_keranjang">Tambahkan Keranjang</string>
    <string name="keranjang">Keranjang</string>
    <string name="total_tagihan">Total Tagihan</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="hapus_keranjang">Hapus Keranjang</string>
    <string name="empty">-</string>
    <string name="cash_on_delivery_cod">Cash On Delivery (COD)</string>
    <string name="manual_transfer">Manual Transfer</string>
    <string name="bayar">Bayar</string>
    <string name="kembali">Kembali</string>
    <string name="jenis_pembayaran">Jenis Pembayaran</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="_1_september_2021_15_12_wib">1 September 2021, 15:12 WIB</string>
    <string name="_5_produk_lainnya">5 produk lainnya</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="detail_transaksi">Detail Transaksi</string>
    <string name="nama_penerima">Nama Penerima</string>
    <string name="nomor_hp_penerima">Nomor HP Penerima</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="header_name">Header Name</string>
</resources>