<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="25dp"
    android:paddingBottom="25dp">

    <TextView
        android:id="@+id/txt_pembayaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pembayaran"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="Nama Penerima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pembayaran">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_receiver_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="Nomor HP Penerima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_receiver_phone"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="Alamat Penerima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_receiver_address"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_jenis_pembayaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_pembayaran"
        android:textColor="@color/gray"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/filledTextField3"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField3" />

    <RadioGroup
        android:id="@+id/radio_payment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:checkedButton="@+id/radio_button_1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_jenis_pembayaran">
        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/red"
            android:text="@string/cash_on_delivery_cod" />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/red"
            android:text="@string/manual_transfer" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_bayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/bayar"
        app:layout_constraintEnd_toEndOf="@+id/radio_payment_type"
        app:layout_constraintTop_toBottomOf="@+id/radio_payment_type" />

    <Button
        android:id="@+id/btn_kembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kembali"
        android:backgroundTint="@color/light"
        android:textColor="@color/gray"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_bayar"
        app:layout_constraintEnd_toStartOf="@+id/btn_bayar"
        app:layout_constraintTop_toTopOf="@+id/btn_bayar" />
</androidx.constraintlayout.widget.ConstraintLayout>