<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_account"
    tools:context=".ui.transactions.TransactionsFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tokowiwin"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_name"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/search_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:text="@string/detail_transaksi"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_header" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_product" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                tools:listitem="@layout/list_detail" />

            <TextView
                android:id="@+id/txt_label_total_tagihan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_tagihan"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/rv_products"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_total_tagihan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="20sp"
                android:textColor="@color/red"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/txt_label_total_tagihan"
                app:layout_constraintStart_toStartOf="@id/txt_label_total_tagihan" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/txt_total_tagihan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/txt_label_nama_penerima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/nama_penerima"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

            <TextView
                android:id="@+id/txt_nama_penerima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/nama_penerima"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/txt_label_nama_penerima"
                app:layout_constraintTop_toBottomOf="@id/txt_label_nama_penerima" />

            <TextView
                android:id="@+id/txt_label_nomor_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nomor_hp_penerima"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/txt_nama_penerima"
                app:layout_constraintTop_toBottomOf="@id/txt_nama_penerima" />

            <TextView
                android:id="@+id/txt_nomor_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nomor_hp_penerima"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/txt_label_nomor_hp"
                app:layout_constraintTop_toBottomOf="@id/txt_label_nomor_hp" />

            <TextView
                android:id="@+id/txt_label_alamat_pengiriman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/alamat_pengiriman"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/txt_nomor_hp"
                app:layout_constraintTop_toBottomOf="@id/txt_nomor_hp" />

            <TextView
                android:id="@+id/txt_alamat_pengiriman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/alamat_pengiriman"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/txt_label_alamat_pengiriman"
                app:layout_constraintTop_toBottomOf="@id/txt_label_alamat_pengiriman" />

            <TextView
                android:id="@+id/txt_label_jenis_pembayaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/jenis_pembayaran"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/txt_alamat_pengiriman"
                app:layout_constraintTop_toBottomOf="@id/txt_alamat_pengiriman" />

            <TextView
                android:id="@+id/txt_jenis_pembayaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/jenis_pembayaran"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/txt_label_jenis_pembayaran"
                app:layout_constraintTop_toBottomOf="@id/txt_label_jenis_pembayaran" />

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/txt_jenis_pembayaran"
                app:layout_constraintStart_toStartOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>